118/compiling_error.txt
/Users/kenkato/python/atcoder/118/D.cpp:21:3: error: use of undeclared identifier 'list'
  list<int> match{2,5,5,4,5,6,4,7,6};
  ^
/Users/kenkato/python/atcoder/118/D.cpp:21:11: error: expected '(' for function-style cast or type construction
  list<int> match{2,5,5,4,5,6,4,7,6};
       ~~~^
/Users/kenkato/python/atcoder/118/D.cpp:21:13: error: use of undeclared identifier 'match'; did you mean 'catch'?
  list<int> match{2,5,5,4,5,6,4,7,6};
            ^~~~~
            catch
/Users/kenkato/python/atcoder/118/D.cpp:21:13: error: expected expression
/Users/kenkato/python/atcoder/118/D.cpp:32:10: error: use of undeclared identifier 'match'
      if(match[A[j]]<=i){
         ^
/Users/kenkato/python/atcoder/118/D.cpp:33:35: error: use of undeclared identifier 'match'; did you mean 'catch'?
        dp[i] = max(dp[i],dp[i+10*match[A[j]]]+A[j]);
                                  ^~~~~
                                  catch
/Users/kenkato/python/atcoder/118/D.cpp:33:35: error: expected expression
/Users/kenkato/python/atcoder/118/D.cpp:33:35: error: expected ']'
/Users/kenkato/python/atcoder/118/D.cpp:33:29: note: to match this '['
        dp[i] = max(dp[i],dp[i+10*match[A[j]]]+A[j]);
                            ^
/Users/kenkato/python/atcoder/118/D.cpp:35:13: error: use of undeclared identifier 'match'; did you mean 'catch'?
      cout<<match[0]<<endl;
            ^~~~~
            catch
/Users/kenkato/python/atcoder/118/D.cpp:35:13: error: expected expression
10 errors generated.
